modified intro page and results output

--- a/public/css/results.css
+++ b/public/css/results.css
@@ -28,7 +28,11 @@ h4 {
 
 .results-item {
     display: flex;
-    padding-bottom: 10px;
+    padding-bottom: 50px;
+}
+
+.results-item p {
+    margin-bottom: 5px;
 }
 
 .results-img {
