--- a/views/group.handlebars
+++ b/views/group.handlebars
@@ -49,7 +49,7 @@
 		<!-- HEADER -->
 		<div class="row header">
 			<div class="col-sm-8">
-				<h1>Your Squad</h1>
+				<h1>(1/3) Your Squad</h1>
 			</div>
 			<div class="col-sm-4">
 				<a href="/"><button type="button" class="btn btn-block btn-secondary">Back to Home Page</button></a>
