--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -27,13 +27,31 @@
 				</div>
 			</div>
 
-	        <h3>squadFeeder helps you decide what food your group wants to eat!</h3>
-	        <h3>Everyone chooses their favorite foods in separate windows.</h3> 
-	        <h3>squadFeeder tells you what your overall top 3 picks are.</h3> 
-	        <h3>Easy and simple! Let's start choosing!</h3>
+			<div class="row">
+				<div class="col-sm-12 text-xs-center">
+					<h3>We help your group quickly find a place to eat together, in three easy steps:</h3>
+				</div>
+			</div>
+
+			<div class="row">
+				<div class="col-sm-4">
+					<h3>Step 1</h3>
+					<p>Form a group by sharing a link!</p>
+				</div>
+				<div class="col-sm-4">
+					<h3>Step 2</h3>
+					<p>Choose your favorite foods and preferences!</p>
+				</div>
+				<div class="col-sm-4">
+					<h3>Step 3</h3>
+					<p>When everyone is done, get your results!</p>
+				</div>
+			</div>
 
 	        <div class="row">
 				<div class="col-sm-12 text-xs-center">
+					<hr>
+					<h3>Quick and easy - let's start choosing!</h3>
 					<button type="button" class="btn btn-lg btn-primary btn-color btn-submit">Click here to start!</button>
 				</div>
 			</div>
