--- a/views/results.handlebars
+++ b/views/results.handlebars
@@ -23,7 +23,7 @@
 		<!-- HEADER -->
 		<div class="row header">
 			<div class="col-sm-8">
-				<h1>Results</h1>
+				<h1>(3/3) Results</h1>
 			</div>
 			<div class="col-sm-4">
 				<a href=".."><button class="btn btn-secondary btn-block">Back to Start</button></a>
