--- a/views/selection2.handlebars
+++ b/views/selection2.handlebars
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-	<title>squadFeeder: {{name}}</title>	
+	<title>(2/3) squadFeeder: {{name}}</title>	
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- LIBRARIES -->
@@ -55,7 +55,7 @@
 	<div class="container main-container">
 		<div class="row header">
 			<div class="col-sm-8">
-				<h1>Selection</h1>
+				<h1>(2/3) Selection</h1>
 			</div>
 			<div class="col-sm-4">
 				<a href="/"><button type="button" class="btn btn-block btn-secondary">Back to Home Page</button></a>
