--- a/views/selection.handlebars
+++ b/views/selection.handlebars
@@ -65,7 +65,7 @@ valueOf()+(h?'&utmxhash='+escape(h.substr(1)):'')+
 	<div class="container main-container">
 		<div class="row header">
 			<div class="col-sm-8">
-				<h1>Selection</h1>
+				<h1>(2/3) Selection</h1>
 			</div>
 			<div class="col-sm-4">
 				<a href="/"><button type="button" class="btn btn-block btn-secondary">Back to Home Page</button></a>
