--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,6 +4,7 @@
 	<title>squadFeeder</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type"image/ico" href="/assets/favicon.ico">
 	<!-- LIBRARIES -->
 	<link href="/css/bootstrap.min.css" rel="stylesheet">
 	<link href="/css/bootstrap-flex.min.css" rel="stylesheet">
@@ -22,8 +23,9 @@
 	<div align="center">
 		<div class="container main-container">
 	        <div class="row header">
-				<div class="col-sm-12">
-					<h1 class="display-4">squadFeeder</h1>
+				<div class="col-sm-12 text-xs-center">
+					<img class="logo-img" src="/assets/logo.png">
+					<h1 class="display-4">squad<span class="logo-text">Feeder</span></h1>
 				</div>
 			</div>
 
@@ -32,26 +34,27 @@
 					<h3>We help your group quickly find a place to eat together, in three easy steps:</h3>
 				</div>
 			</div>
+			<div class="row spacer"></div>
 
 			<div class="row">
 				<div class="col-sm-4">
-					<h3>Step 1</h3>
+					<h5>Step 1</h5>
 					<p>Form a group by sharing a link!</p>
 				</div>
 				<div class="col-sm-4">
-					<h3>Step 2</h3>
+					<h5>Step 2</h5>
 					<p>Choose your favorite foods and preferences!</p>
 				</div>
 				<div class="col-sm-4">
-					<h3>Step 3</h3>
+					<h5>Step 3</h5>
 					<p>When everyone is done, get your results!</p>
 				</div>
 			</div>
 
+
 	        <div class="row">
 				<div class="col-sm-12 text-xs-center">
-					<hr>
-					<h3>Quick and easy - let's start choosing!</h3>
+					<!-- <h3>Quick and easy - let's start choosing!</h3> -->
 					<button type="button" class="btn btn-lg btn-primary btn-color btn-submit">Click here to start!</button>
 				</div>
 			</div>
