--- a/views/selection.handlebars
+++ b/views/selection.handlebars
@@ -20,6 +20,7 @@ valueOf()+(h?'&utmxhash='+escape(h.substr(1)):'')+
 	<title>squadFeeder: {{name}}</title>	
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type"image/ico" href="/assets/favicon.ico">
 	<!-- LIBRARIES -->
 	<link href="/css/bootstrap.min.css" rel="stylesheet">
 	<link href="/css/bootstrap-flex.min.css" rel="stylesheet">
@@ -121,7 +122,7 @@ valueOf()+(h?'&utmxhash='+escape(h.substr(1)):'')+
 
 			<!-- SIDEBAR -->
 			<div class="col-sm-4 text-xs-center">
-				<h3>Users</h3>
+				<h3>Group</h3>
 				<ul class="list-group">
 					<!-- JQUERY CONTENTS -->
 				</ul>
